--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ol id="list">
     </ol>
 
-    <h3>Why is Playboi Carti the best rapper?</h3>
+    <h3>Dlaczego warto programować w JS?</h3>
     <input id="in">
     <button id="dodaj">Dodaj</button>
     <p class="green" id="out"></p>
