--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,7 +15,7 @@
     <h3>Dlaczego warto programować w JS?</h3>
     <input id="in">
     <button id="dodaj">Dodaj</button>
-    <p class="green" id="out"></p>
+    <p id="out"></p>
     <br><br>
     <h1>Tekst</h1>
     <script src="script.js"></script>
